--- a/Part.1/numpy.ipynb
+++ b/Part.1/numpy.ipynb
@@ -118,6 +118,27 @@
    "id": "a73a21ea-7c04-40fa-a213-705f560d7ca4",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 추가 파이썬 코드\n",
+    "# 기본 공백 대신 다른 구분자 사용\n",
+    "print(\"apple\", \"banana\", \"cherry\", sep=\", \")\n",
+    "\n",
+    "# 여러 값을 출력해보기\n",
+    "name = \"Charlie\"\n",
+    "age = \"28\"\n",
+    "hobby = \"reading\"\n",
+    "\n",
+    "print(\"이름 : \", name, \"나이 : \", age, \"취미 : \", hobby)\n",
+    "print(f\"이름 : {name}, 나이 : {age}, 취미 : {hobby}\")\n",
+    "print(\"이름 : {}, 나이 : {}, 취미 : {}\".format(name, age, hobby))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc2e793c-1795-4750-9b54-e7d82d1d6088",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
